--- a/NanaManager/Properties/Resources.resx
+++ b/NanaManager/Properties/Resources.resx
@@ -121,6 +121,12 @@
   <data name="MenuBars" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MenuBars.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Nana_Manager_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Nana Manager Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Nana_Manager_Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Nana Manager Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="PasswordShow" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PasswordShow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
